# src/swagger.json
@@ -78,6 +78,23 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "Search",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "Filters",
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/components/schemas/FilterEntry"
+              }
+            }
           }
         ],
         "responses": {
@@ -221,6 +238,23 @@
             "in": "query",
             "schema": {
               "type": "string"
+            }
+          },
+          {
+            "name": "Search",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "Filters",
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/components/schemas/FilterEntry"
+              }
             }
           }
         ],
@@ -375,6 +409,23 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "Search",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "Filters",
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/components/schemas/FilterEntry"
+              }
+            }
           }
         ],
         "responses": {
@@ -528,6 +579,23 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "Search",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "Filters",
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/components/schemas/FilterEntry"
+              }
+            }
           }
         ],
         "responses": {
@@ -640,6 +708,23 @@
             "in": "query",
             "schema": {
               "type": "string"
+            }
+          },
+          {
+            "name": "Search",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "Filters",
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/components/schemas/FilterEntry"
+              }
             }
           }
         ],
@@ -807,6 +892,23 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "Search",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "Filters",
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/components/schemas/FilterEntry"
+              }
+            }
           }
         ],
         "responses": {
@@ -959,6 +1061,23 @@
             "in": "query",
             "schema": {
               "type": "string"
+            }
+          },
+          {
+            "name": "Search",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "Filters",
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/components/schemas/FilterEntry"
+              }
             }
           }
         ],
@@ -1133,6 +1252,23 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "Search",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "Filters",
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/components/schemas/FilterEntry"
+              }
+            }
           }
         ],
         "responses": {
@@ -1296,6 +1432,23 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "Search",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "Filters",
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/components/schemas/FilterEntry"
+              }
+            }
           }
         ],
         "responses": {
@@ -1448,6 +1601,23 @@
             "in": "query",
             "schema": {
               "type": "string"
+            }
+          },
+          {
+            "name": "Search",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "Filters",
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/components/schemas/FilterEntry"
+              }
             }
           }
         ],
@@ -1602,6 +1772,23 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "Search",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "Filters",
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/components/schemas/FilterEntry"
+              }
+            }
           }
         ],
         "responses": {
@@ -1747,6 +1934,13 @@
           "totalCount": {
             "type": "integer",
             "format": "int32"
+          },
+          "filterableColumns": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/FilterableColumn"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -1849,6 +2043,13 @@
           "totalCount": {
             "type": "integer",
             "format": "int32"
+          },
+          "filterableColumns": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/FilterableColumn"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -1952,6 +2153,13 @@
           "totalCount": {
             "type": "integer",
             "format": "int32"
+          },
+          "filterableColumns": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/FilterableColumn"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -2016,6 +2224,13 @@
           "totalCount": {
             "type": "integer",
             "format": "int32"
+          },
+          "filterableColumns": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/FilterableColumn"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -2226,6 +2441,52 @@
           "totalCount": {
             "type": "integer",
             "format": "int32"
+          },
+          "filterableColumns": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/FilterableColumn"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "FilterEntry": {
+        "type": "object",
+        "properties": {
+          "field": {
+            "type": "string",
+            "nullable": true
+          },
+          "operator": {
+            "type": "string",
+            "nullable": true
+          },
+          "value": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "FilterableColumn": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "type": {
+            "type": "string",
+            "nullable": true
+          },
+          "operators": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -2262,6 +2523,13 @@
           "totalCount": {
             "type": "integer",
             "format": "int32"
+          },
+          "filterableColumns": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/FilterableColumn"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -2294,6 +2562,13 @@
           "totalCount": {
             "type": "integer",
             "format": "int32"
+          },
+          "filterableColumns": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/FilterableColumn"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -2333,6 +2608,13 @@
           "totalCount": {
             "type": "integer",
             "format": "int32"
+          },
+          "filterableColumns": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/FilterableColumn"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -2381,6 +2663,13 @@
           "totalCount": {
             "type": "integer",
             "format": "int32"
+          },
+          "filterableColumns": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/FilterableColumn"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -2435,6 +2724,13 @@
           "totalCount": {
             "type": "integer",
             "format": "int32"
+          },
+          "filterableColumns": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/FilterableColumn"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -2483,6 +2779,13 @@
           "totalCount": {
             "type": "integer",
             "format": "int32"
+          },
+          "filterableColumns": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/FilterableColumn"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
